<resources>
    <string name="app_name">proyectoBase</string>
    <string name="mensaje_de_bienvenida">Mensaje de Bienvenida</string>
    <string name="home">Home</string>
    <string name="facebook">Facebook</string>
    <string name="sign_in_with_email">Sign in with Email</string>
    <string name="apple_id">Apple ID</string>
    <string name="todo">TODO</string>
    <string name="by_continuing_you_agree_to_my_terms_and_contitions">By continuing you agree to my terms and contitions</string>
    <string name="google">Google</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_configuraciones">Configuraciones</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>